[ALGO-000] fix: team lead hot fix for search placeholder on dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -56,14 +56,14 @@
 
 .ais-SearchBox-input:focus {
   padding: 1rem 26.7rem 1rem 1rem;
-  transition: all 0.3s;
+  transition: all 0.5s;
 }
 
 .ais-SearchBox-input::placeholder {
   text-align: left;
 }
 
-.ais-SearchBox-input::-webkit-search-cancel-button {
+/* .ais-SearchBox-input::-webkit-search-cancel-button {
   -webkit-appearance: none;
   appearance: none;
   height: 10px;
@@ -72,7 +72,7 @@
   background-size: 10px 10px;
   position: absolute;
   right: 20px;
-}
+} */
 
 .ais-SearchBox-resetIcon {
   display: none;
